Set overflow to unset to fix main menu dropdown
DDSDK-219

--- a/web/themes/custom/mungo/assets_src/sass/mixins/menus.mixins.scss
+++ b/web/themes/custom/mungo/assets_src/sass/mixins/menus.mixins.scss
@@ -14,7 +14,7 @@
       width: auto;
       height: auto;
       background: none;
-      overflow: auto;
+      overflow: unset;
     }
   }
   .burger--main--menu--toggle {
@@ -22,7 +22,7 @@
     position: absolute !important;
     top: 23px;
     right: 10px;
-    &:before, 
+    &:before,
     &:after {
       left: 0;
     }
